cmake_minimum_required(VERSION 3.24)
project(6_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(6_2 main.cpp)

add_executable(A A.cpp)
add_executable(B B.cpp)
add_executable(D D.cpp)
add_executable(E E.cpp)
add_executable(F F.cpp)
add_executable(G G.cpp)
add_executable(H H.cpp)
add_executable(J J.cpp)
add_executable(I I.cpp)
add_executable(C C.cpp)